World generation: speeding and fixing stalling...
Nasty to debug.
Had to lower dungeon size.
Fixed world generations soft errors from 20-30% to 1-10%.